成る可く更新が早くなるように設定したつもり

--- a/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
+++ b/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
@@ -1,5 +1,5 @@
 <system>
-  workers 3
+  workers 4
 </system>
 
 <source>
@@ -19,8 +19,20 @@
 
   # ログはリアルタイムで見たい
   flush_mode immediate
-  flush_interval 5
-  retry_limit 300
+  num_threads 4
+  flush_thread_count 4
+
+  buffer_type memory
+  buffer_chunk_limit 256m
+  buffer_queue_limit 4096
+  flush_interval 1s
+
+  try_flush_interval 0.1
+  retry_max_interval 5s		# 再試行の最大間隔
+                            # 失敗する度に間隔が延びていくが、最大は 5s
+  retry_limit 300           # 300回書き込みに失敗したらログを捨てる
+  retry_wait 1
+  max_retry_wait 5
   <auth>
     method basic
     username root@root.root
