--- a/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -2,7 +2,6 @@
 
 options {
   # log_msg_size(65536);
-  flush_lines(1);
   # time_reopen (10);
   # log_fifo_size (50000);
   chain_hostnames(off);
@@ -12,17 +11,15 @@ options {
   frac_digits (3);
   ts_format (iso);
 
-  # stats(freq(0));
-  owner("root"); group("adm"); perm(0640);
-  create_dirs(yes); dir_perm(0750);
+  stats(freq(0));
 };
 
 # 一般ユーザなのでエフェメラルポートを使う
 source s_tcp {
-  syslog(transport(tcp) port(6601));
+  syslog(port(6601) transport(tcp));
 };
 source s_udp {
-  syslog(transport(udp) port(5514));
+  syslog(port(5514) transport(udp));
 };
 source s_internal {
   internal();
@@ -45,7 +42,11 @@ destination d_fluentd {
   syslog("fluentd"
     transport("udp")
     port(5140)
+    flush_lines(0)         # バッファしない (デフォルト)
   );
+};
+destination d_test {
+  file("/config/log/test.log");
 };
 
 log {
@@ -53,8 +54,10 @@ log {
   source(s_udp);
   source(s_internal);
   destination(d_fluentd);
+  destination(d_test);
 };
 
 # filter は指定しない
-# tcp と udp を纏めて tcp にして投げるだけ
+# tcp と udp を纏めて udp で投げるだけ。
+# せめて tcp にしたいな。
 
