--- a/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
+++ b/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
@@ -11,28 +11,44 @@
   tag syslog
 </source>
 
+<buffer>
+  retry_type periodic
+  retry_wait 1                      # The wait interval for the first retry.
+  max_retry_wait 5
+
+  retry_exponential_backoff_base 1  # Increase the wait time by a factor of N.
+  retry_type exponential_backoff    # Set 'periodic' for constant intervals.
+
+  # retry_max_interval 1h           # Cap the wait interval. (see above)
+  retry_randomize false             # Apply randomization. (see above)
+
+  retry_max_interval 5s		# 再試行の最大間隔
+                            # 失敗する度に間隔が延びていくが、最大は 5s
+  retry_limit 300           # 300回書き込みに失敗したらログを捨てる
+
+  buffer_chunk_limit 256m
+  buffer_queue_limit 4096
+</buffer>
+
 <match syslog.*.*>
   @type http
   endpoint http://OpenObserve:5080/api/default/default/_json
   content_type json
   json_array true
 
-  # ログはリアルタイムで見たい
-  flush_mode immediate
   num_threads 4
+
+  <buffer>
+    @type memory
+  </buffer>
+  flush_mode immediate              # ログはリアルタイムで見たい
+  flush_interval 1			        # 1秒
+  flush_thread_interval 0.1         # undocumented
   flush_thread_count 4
+  delayed_commit_timeout 1
+  slow_flush_log_threshold 1        # フラッシュ間隔が 5s 以上掛かった場合メッセージを出力する
 
-  buffer_type memory
-  buffer_chunk_limit 256m
-  buffer_queue_limit 4096
-  flush_interval 1s
-
-  try_flush_interval 0.1
-  retry_max_interval 5s		# 再試行の最大間隔
-                            # 失敗する度に間隔が延びていくが、最大は 5s
-  retry_limit 300           # 300回書き込みに失敗したらログを捨てる
-  retry_wait 1
-  max_retry_wait 5
+  flush_at_shutdown true
   <auth>
     method basic
     username root@root.root
