default-network-drivers を利用するように変更

--- a/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,5 +1,8 @@
 @version: 4.7
 
+# need for default-network-drivers()
+@include "scl.conf"
+
 options {
   # log_msg_size(65536);
   # time_reopen (10);
@@ -11,15 +14,23 @@ options {
   frac_digits (3);
   ts_format (iso);
 
-  stats(freq(0));
+  stats_freq(86400);
 };
 
 # 一般ユーザなのでエフェメラルポートを使う
-source s_tcp {
-  syslog(port(6601) transport(tcp));
-};
-source s_udp {
-  syslog(port(5514) transport(udp));
+#source s_tcp {
+#  syslog(port(6601) transport(tcp));
+#};
+#source s_udp {
+#  syslog(port(5514) transport(udp));
+#};
+source s_net {
+  default-network-drivers(
+    # これで Cisco や Fortigate などの規格に準拠していない有名どころのログファイルに対応
+    # デフォルトで 514/tcp, 514/udp, 601/tcp, 6514/tcp(tsl) のポートを開く
+    tcp-port(6601)
+    udp-port(5514)
+  );
 };
 source s_internal {
   internal();
@@ -50,8 +61,9 @@ destination d_test {
 };
 
 log {
-  source(s_tcp);
-  source(s_udp);
+  # source(s_tcp);
+  # source(s_udp);
+  source(s_net);
   source(s_internal);
   destination(d_fluentd);
   destination(d_test);
