--- a/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,29 +1,16 @@
 @version: 4.7
-
-# need for default-network-drivers()
-@include "scl.conf"
+@include "scl.conf"		# need for default-network-drivers()
 
 options {
-  # log_msg_size(65536);
-  # time_reopen (10);
-  # log_fifo_size (50000);
   chain_hostnames(off);
   use_dns(no); use_fqdn(no); dns_cache(no); keep_hostname (yes);
 
-  # log milliseconds
-  frac_digits (3);
+  frac_digits (3);		# 秒以下の桁数を指定
   ts_format (iso);
 
   stats_freq(86400);
 };
 
-# 一般ユーザなのでエフェメラルポートを使う
-#source s_tcp {
-#  syslog(port(6601) transport(tcp));
-#};
-#source s_udp {
-#  syslog(port(5514) transport(udp));
-#};
 source s_net {
   default-network-drivers(
     # これで Cisco や Fortigate などの規格に準拠していない有名どころのログファイルに対応
@@ -36,19 +23,6 @@ source s_internal {
   internal();
 };
 
-#https://www.syslog-ng.com/technical-documents/doc/syslog-ng-open-source-edition/3.16/mutual-authentication-using-tls#TOPIC-956369
-#source s_tls {
-#  network(
-#    ip(0.0.0.0) port(6514)
-#    transport("tls")
-#    tls(
-#      key-file("/etc/syslog-ng/key.d/syslog-ng.key")
-#      cert-file("/etc/syslog-ng/cert.d/syslog-ng.cert")
-#      ca-dir("/etc/syslog-ng/ca.d")
-#    )
-#  );
-#};
-
 destination d_fluentd {
   syslog("fluentd"
     transport("udp")
@@ -57,12 +31,10 @@ destination d_fluentd {
   );
 };
 destination d_test {
-  file("/config/log/test.log");
+  file("/config/log/test.log");		# syslog-ng まで届いていることの確認用
 };
 
 log {
-  # source(s_tcp);
-  # source(s_udp);
   source(s_net);
   source(s_internal);
   destination(d_fluentd);
