--- a/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
+++ b/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
@@ -19,22 +19,18 @@
   retryable_response_codes [500, 503]
 
   delayed_commit_timeout 1
-  # num_threads 4
   flush_thread_count 4
 
   <buffer>
     @type memory
     flush_mode immediate              # ログはリアルタイムで見たい
-    # flush_interval 1		          # 1秒
     retry_type periodic
     retry_wait 1                      # The wait interval for the first retry.
-    # max_retry_wait 5			# old
-    retry_max_interval 5		# new
+    retry_max_interval 5
 
     retry_exponential_backoff_base 1  # Increase the wait time by a factor of N.
     retry_type exponential_backoff    # Set 'periodic' for constant intervals.
 
-    # retry_max_interval 1h           # Cap the wait interval. (see above)
     retry_randomize false             # Apply randomization. (see above)
 
     retry_max_interval 5s		# 再試行の最大間隔
