syslog-ng から OpenObserve へ直接送信
試験用に
fluentd 経由で OpenObserve へ送信するストリーム default
syslog-ng から OpenObserve へ直接送信するストリーム syslog-ng
の二つを作成

--- a/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -30,6 +30,16 @@ destination d_fluentd {
     flush_lines(0)         # バッファしない (デフォルト)
   );
 };
+# fluentd を通さずに OpenObserve に送る
+destination d_openobserve {
+    openobserve-log(
+        url("http://openobserve")
+        port(5080)
+        stream("syslog-ng")
+        user("root@root.root")
+        password("root")
+    );
+};
 destination d_test {
   file("/config/log/test.log");		# syslog-ng まで届いていることの確認用
 };
@@ -38,6 +48,7 @@ log {
   source(s_net);
   source(s_internal);
   destination(d_fluentd);
+  destination(d_openobserve);
   destination(d_test);
 };
 
