fluentd で受信したメッセージを syslog (rfc5424) として処理
fluentd で tcp と udp の両方を待ち受け
syslog-ng と fluentd の間を tcp に変更

--- a/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-fluentd-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -2,13 +2,14 @@
 @include "scl.conf"		# need for default-network-drivers()
 
 options {
-  chain_hostnames(off);
-  use_dns(no); use_fqdn(no); dns_cache(no); keep_hostname (yes);
+  chain-hostnames(off);
+  use-dns(no); use-fqdn(no); dns-cache(no); keep-hostname(yes);
+  create-dirs(yes); dir-perm(0755); perm(0644);
 
-  frac_digits (3);		# 秒以下の桁数を指定
-  ts_format (iso);
+  frac-digits(3);		# 秒以下の桁数を指定
+  ts-format(rfc3339);   # 多分無意味
 
-  stats_freq(86400);
+  stats(freq(86400));
 };
 
 source s_net {
@@ -17,6 +18,7 @@ source s_net {
     # デフォルトで 514/tcp, 514/udp, 601/tcp, 6514/tcp(tsl) のポートを開く
     tcp-port(6601)
     udp-port(5514)
+    ip-protocol(4)
   );
 };
 source s_internal {
@@ -25,20 +27,35 @@ source s_internal {
 
 destination d_fluentd {
   syslog("fluentd"
-    transport("udp")
+    transport("tcp")
     port(5140)
-    flush_lines(0)         # バッファしない (デフォルト)
+    ip-protocol(4)
+    time-zone("Asia/Tokyo")
+
+    disk-buffer(
+      reliable(yes)
+      mem-buf-size(163840000)	# 156.25MB (default)
+      disk-buf-size(104857600)	# 100MB
+      dir("/config/log/buff_to_Fluentd/")
+    )
   );
 };
 # fluentd を通さずに OpenObserve に送る
 destination d_openobserve {
-    openobserve-log(
-        url("http://openobserve")
-        port(5080)
-        stream("syslog-ng")
-        user("root@root.root")
-        password("root")
-    );
+  openobserve-log(
+    url("http://openobserve")
+    port(5080)
+    stream("syslog-ng")
+    user("root@root.root")
+    password("root")
+
+    disk-buffer(
+      reliable(yes)
+      mem-buf-size(1048576)		# 1MB
+      disk-buf-size(104857600)	# 100MB
+      dir("/config/log/buff_to_OpenObserve/")
+    )
+  );
 };
 destination d_test {
   file("/config/log/test.log");		# syslog-ng まで届いていることの確認用
@@ -52,7 +69,7 @@ log {
   destination(d_test);
 };
 
-# filter は指定しない
-# tcp と udp を纏めて udp で投げるだけ。
-# せめて tcp にしたいな。
+# 6601/tcp, 5514/udp で受けて Fluentd へ 5080/tcp で送る
+# default-network-drivers で送られてきたログを解析し
+# Fluentd へ syslog (IETF/RFC5424) 形式で送信
 
