--- a/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
+++ b/syslogng-fluentd-openobserve/fluentd/conf/fluent.conf
@@ -2,50 +2,55 @@
   workers 4
 </system>
 
-<source>
+<source>	# for udp
   @type syslog
   port 5140
   bind 0.0.0.0
-  format none
+  <transport udp>
+  </transport>
   message_length_limit 8192
-  tag syslog
+
+  frame_type octet_count
+  severity_key severity
+  facility_key facility
+  <parse>
+    message_format rfc5424
+  </parse>
+  tag syslog.udp
 </source>
 
-<match syslog.*.*>
+<source>	# for tcp
+  @type syslog
+  port 5140
+  bind 0.0.0.0
+  <transport tcp>
+  </transport>
+  message_length_limit 8192
+
+  # https://github.com/fluent/fluentd/issues/2507
+  frame_type octet_count
+  severity_key severity
+  facility_key facility
+  <parse>
+    message_format rfc5424
+  </parse>
+  tag syslog.tcp
+</source>
+
+<match syslog.**>
   @type http
   endpoint http://OpenObserve:5080/api/default/default/_json
   content_type json
   json_array true
   retryable_response_codes [500, 503]
 
-  delayed_commit_timeout 1
-  flush_thread_count 4
-
   <buffer>
     @type memory
     flush_mode immediate              # ログはリアルタイムで見たい
-    retry_type periodic
-    retry_wait 1                      # The wait interval for the first retry.
-    retry_max_interval 5
-
-    retry_exponential_backoff_base 1  # Increase the wait time by a factor of N.
-    retry_type exponential_backoff    # Set 'periodic' for constant intervals.
-
-    retry_randomize false             # Apply randomization. (see above)
-
-    retry_max_interval 5s		# 再試行の最大間隔
-                                # 失敗する度に間隔が延びていくが、最大は 5s
-    retry_max_times 300         # 300回書き込みに失敗したらログを捨てる
-
-    chunk_limit_size 256m
+    # flush_interval 5
+    flush_thread_count 4
   </buffer>
 
-  flush_thread_interval 0.1         # undocumented
-  flush_thread_burst_interval 0.1	# https://github.com/fluent/fluentd/blob/master/lib/fluent/plugin/output.rb
-  flush_thread_count 4
-  slow_flush_log_threshold 1        # フラッシュ間隔が 1s 以上掛かった場合メッセージを出力する
-
-  # flush_at_shutdown true
   <auth>
     method basic
     username root@root.root
