最新の go を手動インストールする為の情報を追加
Debian のパッケージは古くて対応していない

--- a/docker-coredns/docker-compose.yml
+++ b/docker-coredns/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   coredns:
-    # 
+    #
+    # need go-lang https://go.dev/doc/install
+    #
     # git clone https://github.com/coredns/coredns.git
     # cd coredns
     # setenv CFLAGS "-O3 -pipe -march=native -mtune=native" ... 多分効いてない...orz
