OpenObserve SIMD support
試してないけど、SIMD サポート版の URL へ変更。
そもそも SIMD に対応してなかったの？

--- a/syslogng-fluentd-openobserve/docker-compose.yml
+++ b/syslogng-fluentd-openobserve/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # https://openobserve.ai/docs/guide/quickstart/#self-hosted-installation
   OpenObserve:
-    image: public.ecr.aws/zinclabs/openobserve:latest
+    image: public.ecr.aws/zinclabs/openobserve:latest-simd
     container_name: OpenObserve
     logging:
       driver: "local"
