--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -25,22 +25,7 @@ source s_internal {
   internal();
 };
 
-destination d_fluentd {
-  syslog("fluentd"
-    transport("tcp")
-    port(5140)
-    ip-protocol(4)
-    time-zone("Asia/Tokyo")
-
-    disk-buffer(
-      reliable(yes)
-      mem-buf-size(163840000)	# 156.25MB (default)
-      disk-buf-size(104857600)	# 100MB
-      dir("/config/log/buff_to_Fluentd/")
-    )
-  );
-};
-# fluentd を通さずに OpenObserve に送る
+# OpenObserve に送る
 destination d_openobserve {
   openobserve-log(
     url("http://openobserve")
@@ -57,19 +42,9 @@ destination d_openobserve {
     )
   );
 };
-destination d_test {
-  file("/config/log/test.log");		# syslog-ng まで届いていることの確認用
-};
 
 log {
   source(s_net);
   source(s_internal);
-  destination(d_fluentd);
   destination(d_openobserve);
-  destination(d_test);
 };
-
-# 6601/tcp, 5514/udp で受けて Fluentd へ 5080/tcp で送る
-# default-network-drivers で送られてきたログを解析し
-# Fluentd へ syslog (IETF/RFC5424) 形式で送信
-
