--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,4 +1,4 @@
-@version: 4.7
+@version: 4.8
 @include "scl.conf"		# need for default-network-drivers()
 
 options {
@@ -9,7 +9,7 @@ options {
   frac-digits(3);		# 秒以下の桁数を指定
   ts-format(rfc3339);   # 多分無意味
 
-  stats(freq(86400));
+  stats_freq(86400);
 };
 
 source s_net {
