.gitignore 追加、syslog-ng.conf 不要な設定を削除

--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -9,7 +9,7 @@ options {
   frac-digits(3);		# 秒以下の桁数を指定
   ts-format(rfc3339);   # 多分無意味
 
-  stats_freq(86400);
+  stats(freq(86400));
 };
 
 source s_net {
@@ -21,15 +21,17 @@ source s_net {
     ip-protocol(4)
   );
 };
-source s_internal {
-  internal();
-};
+# source s_internal {	# 基盤 OS のログを取得するのは面倒なのでやらない
+#   system();
+#   internal();
+# };
 
 # OpenObserve に送る
 destination d_openobserve {
   openobserve-log(
     url("http://openobserve")
     port(5080)
+    organization("default")
     stream("syslog-ng")
     user("root@root.root")
     password("root")
@@ -45,6 +47,6 @@ destination d_openobserve {
 
 log {
   source(s_net);
-  source(s_internal);
+  # source(s_internal);
   destination(d_openobserve);
 };
