syslog-ng.conf 最適化: scl.conf 組み込みパーサー使い JSON 化
- @include "scl.conf" のコメント更新: Cisco、PaloAlto、Fortigateパーサー含有を明記
- body("$(format-json --scope all-nv-pairs)"): これでパース↓内容ををJSON形式に変換
  * _fortigate_*等のフィールドを OpenObserve で個別表示可能に

--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,12 +1,12 @@
 @version: 4.8
-@include "scl.conf"		# need for default-network-drivers()
+@include "scl.conf"		# Cisco、PaloAlto、Fortigate ログのパースも含まれる
 
 options {
   chain-hostnames(off);
   use-dns(no); use-fqdn(no); dns-cache(no); keep-hostname(yes);
   create-dirs(yes); dir-perm(0755); perm(0644);
 
-  frac-digits(3);		# 秒以下の桁数を指定
+  frac-digits(3);	# 秒以下の桁数を指定
   ts-format(rfc3339);   # 多分無意味
 
   stats(freq(86400));
@@ -14,7 +14,8 @@ options {
 
 source s_net {
   default-network-drivers(
-    # これで Cisco や Fortigate などの規格に準拠していない有名どころのログファイルに対応
+    # ネットワーク経由でログを受信。SCL（@include "scl.conf"）により
+    # Cisco、PaloAlto、Fortigate などのベンダー固有ログを自動識別・パース
     # デフォルトで 514/tcp, 514/udp, 601/tcp, 6514/tcp(tsl) のポートを開く
     tcp-port(6601)
     udp-port(5514)
@@ -29,22 +30,26 @@ source s_net {
 # OpenObserve に送る
 destination d_openobserve {
   openobserve-log(
-    url("http://openobserve")
+    url("http://OpenObserve")
     port(5080)
     organization("default")
     stream("syslog-ng")
     user("root@root.root")
     password("root")
 
+    # scl.conf のFortigateパーサーで追加された .fortigate.* フィールドの JSON 化に必要
+    body("$(format-json --scope all-nv-pairs)")  # 全ての名前-値ペアをJSON形式で送信
+
     disk-buffer(
       reliable(yes)
-      mem-buf-size(1048576)		# 1MB
-      disk-buf-size(104857600)	# 100MB
+      mem-buf-size(1048576)      # メモリバッファサイズ: 1MB (一時的にメモリに保持するログのサイズ)
+      disk-buf-size(104857600)   # ディスクバッファサイズ: 100MB (OpenObserveが停止時のログ保持用)
       dir("/config/log/buff_to_OpenObserve/")
     )
   );
 };
 
+# 全ログ用（SCLのFortigateパーサーが該当ログを自動処理）
 log {
   source(s_net);
   # source(s_internal);
