syslog-ng.confのコメント微調整

--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -1,5 +1,5 @@
 @version: 4.8
-@include "scl.conf"		# Cisco、PaloAlto、Fortigate ログのパースも含まれる
+@include "scl.conf"		# Cisco、PaloAlto、Fortigate などのログのパースも含まれる
 
 options {
   chain-hostnames(off);
@@ -14,8 +14,6 @@ options {
 
 source s_net {
   default-network-drivers(
-    # ネットワーク経由でログを受信。SCL（@include "scl.conf"）により
-    # Cisco、PaloAlto、Fortigate などのベンダー固有ログを自動識別・パース
     # デフォルトで 514/tcp, 514/udp, 601/tcp, 6514/tcp(tsl) のポートを開く
     tcp-port(6601)
     udp-port(5514)
