TCP のオクテットストリーム形式にも対応
TCP の受信に flags(syslog-protocol) を追加
RFC 5424, RFC 6587 という新しい形式を受け付け、古い形式も引き続き処理可能。

--- a/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
+++ b/syslogng-openobserve/syslog-ng/conf/syslog-ng.conf
@@ -12,13 +12,14 @@ options {
   stats(freq(86400));
 };
 
-source s_net {
-  default-network-drivers(
-    # デフォルトで 514/tcp, 514/udp, 601/tcp, 6514/tcp(tsl) のポートを開く
-    tcp-port(6601)
-    udp-port(5514)
-    ip-protocol(4)
-  );
+source s_tcp {
+    syslog( ip(0.0.0.0) port(514)  transport("tcp") flags(syslog-protocol) );
+    syslog( ip(0.0.0.0) port(6601) transport("tcp") flags(syslog-protocol) );
+    # flags(syslog-protocol) オクテットカウンティング形式を受け付ける
+};
+source s_udp {
+    syslog( ip(0.0.0.0) port(514) transport("udp") );
+    syslog( ip(0.0.0.0) port(5514) transport("udp") );
 };
 # source s_internal {	# 基盤 OS のログを取得するのは面倒なのでやらない
 #   system();
@@ -49,7 +50,8 @@ destination d_openobserve {
 
 # 全ログ用（SCLのFortigateパーサーが該当ログを自動処理）
 log {
-  source(s_net);
+  source(s_tcp);
+  source(s_udp);
   # source(s_internal);
   destination(d_openobserve);
 };
